--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 				<p>Birthday</p>
 				<p>Sahoo</p>
 				<p>I want to thank you </p>
-				<p>for being the most caring and loving sister </p>
-				<p><strong>in the entire world</strong></p>
+				<p>for being the most caring and loving</p>
+				<p><strong>sister in the entire world</strong></p>
 				<p>I feel that you not my sister</p>
 				<p>but my best friend.</p>
 				<p>Thanks for everything Sahoo</p>
